# chuggingthroughtime

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: pyproject.toml
backend/chuggingthroughtime/: db.sqlite3  manage.py
backend/chuggingthroughtime/chuggingthroughtime/: asgi.py  settings.py  urls.py  wsgi.py
backend/scraping/: routes.json  scrape.ipynb
backend/scraping/dump/concourse/: index.html
backend/scraping/dump/concourse/track1/: birmspecial194112.html  citymemphis195008.html  cityneworl194706.html  cityneworl197104.html  crescent195008.html  crescent197104.html  crescent197303.html  georgewash196706.html  georgian196308.html  humbird194706.html  humbird196308.html  index.html  pan-am192701.html  pan-am195407.html  piedmontltd197303.html  powhatan195008.html  rebel193809.html  rebel195304.html  silvercomet194706.html  soubelle194106.html  soubelle196803.html  southerner194112.html  tennessean195212.html
backend/scraping/dump/concourse/track10/: azteceagle195212.html  cuba195705.html  elchepe196210.html  elfronterizo196210.html  eltapatio196210.html  eltapatio196803.html  index.html  panamarr194812.html
backend/scraping/dump/concourse/track11/: index.html  indianpacific198805.html  lapplandarrow197512.html  orientexpress193908.html  orientexpress200906.html  ostwest197105.html  rheingold196802.html  shinkansen199512.html  simplonoe196010.html
backend/scraping/dump/concourse/track12/: atsf7172196806.html  camasprairie195407.html  chililine194106.html  chippy194912.html  georgia197104.html  index.html  silverton194106.html  steptoe194106.html  (+3 more)
(+243 files in other folders)
